--- a/src/css/NavHeader.css
+++ b/src/css/NavHeader.css
@@ -7,6 +7,7 @@
   padding: 10px 0px;
   background-color: #171545;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 .header-wrap {
   display: flex;
